Fixed spacing, added heading

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .App {
   margin: 30px auto;
-  max-width: 600px;
+  max-width: 750px;
 }
 
 .App-logo {
@@ -8,8 +8,17 @@
   pointer-events: none;
 }
 
+.App h2 {
+  color: #5c636a;
+  text-align: center;
+  margin-bottom: 20px;
+}
+
 .App footer {
+  text-align: center;
   font-size: 12px;
+  font-weight: bold;
+  color: #5c636a;
   margin: 10px auto;
 }
 
